--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/product_pal
-spring.datasource.username=product_pal
-spring.datasource.password=product_pal
+spring.datasource.url=mysql://root:pABmUL9UQjNFB8hnDwD3@containers-us-west-34.railway.app:7770/railway
+spring.datasource.username=root
+spring.datasource.password=pABmUL9UQjNFB8hnDwD3
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
