--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # Database connection settings
-spring.datasource.url=mysql://root:pABmUL9UQjNFB8hnDwD3@containers-us-west-34.railway.app:7770/railway
+spring.datasource.url= jdbc:mysql://root:pABmUL9UQjNFB8hnDwD3@containers-us-west-34.railway.app:7770/railway
 spring.datasource.username=root
 spring.datasource.password=pABmUL9UQjNFB8hnDwD3
 
